(executable
 (name main)
 (libraries ocaml-vdom)
 (link_flags -no-check-prims)
 (js_of_ocaml (flags --no-inline))
 (preprocess
  (pps gen_js_api.ppx))
 (modes js))

; (rule
;  (targets main.ml)
;  (deps main.mli)
;  (action
;   (run gen_js_api %{deps})))

(rule
 (targets main.js)
 (deps main.bc.js)
 (action
  (run cp %{deps} %{targets})))

(alias
 (name DEFAULT)
 (deps main.js main.html))
